--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-19  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation by
+                 Francisco Javier Fernandez <serrador@arrakis.es>
+
 2003-06-16  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
