Updated Swedish translation.
2003-06-22  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright\n"
-"POT-Creation-Date: 2003-05-27 22:05+0200\n"
-"PO-Revision-Date: 2003-05-20 00:28+0200\n"
+"POT-Creation-Date: 2003-06-22 00:50+0200\n"
+"PO-Revision-Date: 2003-06-22 00:51+0200\n"
 "Last-Translator: Richard Hult <rhult@codefactory.se>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -144,8 +144,8 @@ msgid "A computer break reminder."
 msgstr "En datorpauspåminnare."
 
 #: src/drwright.c:662
-msgid "Written by Richard Hult &lt;rhult@codefactory.se&gt;"
-msgstr "Skrivet av Richard Hult &lt;rhult@codefactory.se&gt;"
+msgid "Written by Richard Hult &lt;richard@imendio.com&gt;"
+msgstr "Skrivet av Richard Hult &lt;rhult@imendio.com&gt;"
 
 #: src/drwright.c:663
 msgid "Eye candy added by Anders Carlsson"
