--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-22  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2003-06-19  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation by
