--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-24  Richard Hult  <rhult@codefactory.se>
+
+	* ca.po: New translation from Jordi Mallach.
+
 2003-06-22  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
