Update description and release.
2003-06-24  Richard Hult  <richard@imendio.com>

	* drwright.spec.in: Update description and release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-24  Richard Hult  <richard@imendio.com>
 
+	* drwright.spec.in: Update description and release.
+
+2003-06-24  Richard Hult  <richard@imendio.com>
+
 	* configure.in: Bump version.
 
 	* src/drwright.schemas: Add allow_postpone key.
