--- a/po/sv.po
+++ b/po/sv.po
@@ -137,11 +137,11 @@ msgstr "Glöm inte att ta regelbunda pauser."
 
 #: src/drwright.c:595
 msgid "Don't Quit"
-msgstr ""
+msgstr "Avsluta inte"
 
 #: src/drwright.c:599
 msgid "Quit"
-msgstr ""
+msgstr "Avsluta"
 
 #: src/drwright.c:645
 msgid "About DrWright"
@@ -170,9 +170,6 @@ msgstr "Skjut upp pausen"
 #: src/drw-break-window.c:296
 msgid "Take a break!"
 msgstr "Ta en paus!"
-
-#~ msgid "Written by Richard Hult <richard@codefactory.se>"
-#~ msgstr "Skrivet av Richard Hult <richard@codefactory.se>"
 
 #~ msgid "Break coming up!"
 #~ msgstr "Snart paus!"
