Update Czech translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-24  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-06-24  Richard Hult  <rhult@codefactory.se>
 
 	* ca.po: New translation from Jordi Mallach.
