--- a/po/cs.po
+++ b/po/cs.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: drwright VERSION\n"
-"POT-Creation-Date: 2003-06-24 00:30+0200\n"
-"PO-Revision-Date: 2003-06-14 20:13+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-24 12:03+0200\n"
+"PO-Revision-Date: 2003-06-24 17:36+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -136,11 +136,11 @@ msgstr "Nezapomeňte si pravidelně udělat přestávku."
 
 #: src/drwright.c:595
 msgid "Don't Quit"
-msgstr ""
+msgstr "Nekončit"
 
 #: src/drwright.c:599
 msgid "Quit"
-msgstr ""
+msgstr "Skončit"
 
 #: src/drwright.c:645
 msgid "About DrWright"
