--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-26  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Added russian translation.
+
 2003-06-24  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
