--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-30  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Luc Roobrouck.
+
 2003-06-26  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Added russian translation.
