--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-08  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2003-07-02  Dafydd Harries  <daf@parnassus.ath.cx>
 
 	* cy.po: Updated Welsh translation.
